# 2write

./: .gitignore  CMakeLists.txt  LICENSE  README.md  editor.cpp  editor.h  main.cpp  main_window.cpp  main_window.h  text_edit.cpp  text_edit.h
src/: main.cpp
src/headers/: find_toolbar.h  main_window.h  text_edit.h
src/sources/: find_toolbar.cpp  main_window.cpp  text_edit.cpp
